tests/should-fail/flags/overflowing-int-literal.j
//# +checknumberliterals
function test takes nothing returns nothing
    local integer x = -10000000000
endfunction
